# pose_control

./: README.md  readme.md
follow1/: X5.sh
follow1/devel/: .catkin
follow1/devel/include/arm_control/: reconfigConfig.h
follow1/devel/lib/arm_control/: arm_node1
follow1/devel/lib/pkgconfig/: arm_control.pc
follow1/devel/lib/python3/dist-packages/arm_control/msg/: __init__.py
follow1/devel/share/arm_control/cmake/: arm_control-msg-paths.cmake  arm_controlConfig.cmake
follow1/devel/share/arm_control/docs/: reconfigConfig-usage.dox
follow1/devel/share/common-lisp/ros/arm_control/msg/: _package.lisp  _package_ChassisCtrl.lisp  _package_JointInformation.lisp  _package_PosCmd.lisp
follow1/devel/share/gennodejs/ros/arm_control/msg/: JointControl.js
follow1/devel/share/roseus/ros/arm_control/: manifest.l
follow1/src/arm_control/: CMakeLists.txt
follow1/src/arm_control/cfg/: reconfig.cfg
follow1/src/arm_control/include/App/: L5_solve.h  arx_math.h  solve.h
follow1/src/arm_control/include/Hardware/: can.h  motor.h
follow1/src/arm_control/launch/: L5.launch
follow1/src/arm_control/msg/: JointInformation.msg
follow1/src/arm_control/src/: arx.cpp
follow1/src/arm_control/src/App/: arm_control.cpp
follow2/: X5.sh
follow2/devel/: .catkin  local_setup.sh  setup.sh
follow2/devel/include/arm_control/: ChassisCtrl.h
follow2/devel/lib/arm_control/: arm_node4
follow2/devel/lib/pkgconfig/: arm_control.pc
follow2/devel/lib/python3/dist-packages/arm_control/msg/: _JointControl.py
follow2/devel/share/arm_control/cmake/: arm_control-msg-paths.cmake  arm_controlConfig.cmake
follow2/devel/share/common-lisp/ros/arm_control/msg/: JointControl.lisp
follow2/devel/share/roseus/ros/arm_control/: manifest.l
follow2/src/arm_control/: CMakeLists.txt
follow2/src/arm_control/cfg/: reconfig.cfg
follow2/src/arm_control/include/App/: L5_solve.h  arm_control.h  arx_math.h  play.h  solve.h
follow2/src/arm_control/include/Hardware/: math_ops.h
follow2/src/arm_control/launch/: arx5.launch
follow2/src/arm_control/models/: X5liteaa0.urdf
follow2/src/arm_control/src/: arx.cpp
follow2/src/arm_control/teach_record/: out.txt
master1/devel/: .catkin  .rosinstall
master1/devel/lib/arm_control/: arm_node
master1/devel/lib/pkgconfig/: arm_control.pc
master1/devel/lib/python3/dist-packages/arm_control/msg/: _ChassisCtrl.py  _PosCmd.py
master1/devel/share/arm_control/cmake/: arm_control-msg-paths.cmake  arm_controlConfig.cmake
master1/devel/share/arm_control/docs/: reconfigConfig-usage.dox
master1/devel/share/gennodejs/ros/arm_control/msg/: ChassisCtrl.js  PosCmd.js
master1/devel/share/roseus/ros/arm_control/: manifest.l
master1/src/arm_control/: CMakeLists.txt
master1/src/arm_control/cfg/: reconfig.cfg
master1/src/arm_control/include/: utility.h
master1/src/arm_control/include/App/: L5_solve.h  arm_control.h  arx_math.h  play.h  solve.h
master1/src/arm_control/include/Hardware/: can.h  motor.h
master1/src/arm_control/launch/: arx5.launch
master1/src/arm_control/shell/: setup_can.sh
master1/src/arm_control/src/: arx.cpp
master1/src/arm_control/src/App/: arm_control.cpp
master1/src/arm_control/teach_record/: out.txt
master2/devel/: .catkin  local_setup.sh
master2/devel/include/arm_control/: JointInformation.h  PosCmd.h
master2/devel/lib/arm_control/: arm_node3
master2/devel/lib/pkgconfig/: arm_control.pc
master2/devel/lib/python3/dist-packages/arm_control/cfg/: reconfigConfig.py
master2/devel/lib/python3/dist-packages/arm_control/msg/: _JointInformation.py
master2/devel/share/arm_control/cmake/: arm_control-msg-extras.cmake  arm_control-msg-paths.cmake  arm_controlConfig.cmake
master2/devel/share/arm_control/docs/: reconfigConfig-usage.dox
master2/devel/share/gennodejs/ros/arm_control/msg/: JointInformation.js
master2/devel/share/roseus/ros/arm_control/: manifest.l
master2/src/arm_control/: CMakeLists.txt  package.xml
master2/src/arm_control/cfg/: reconfig.cfg
master2/src/arm_control/include/App/: L5_solve.h  arm_control.h  arx_math.h  keyboard.h
master2/src/arm_control/include/Hardware/: can.h
master2/src/arm_control/launch/: arx5.launch
master2/src/arm_control/shell/: setup_can.sh  start.sh
master2/src/arm_control/src/: arx.cpp
pos_follow1/: X5.sh
pos_follow1/devel/: .catkin  .rosinstall
pos_follow1/devel/include/arm_control/: JointControl.h
pos_follow1/devel/lib/arm_control/: arm_node2
pos_follow1/devel/lib/pkgconfig/: arm_control.pc
pos_follow1/devel/share/arm_control/cmake/: arm_control-msg-paths.cmake  arm_controlConfig.cmake
pos_follow1/devel/share/arm_control/docs/: reconfigConfig-usage.dox
pos_follow1/devel/share/roseus/ros/arm_control/: manifest.l
pos_follow1/src/arm_control/: CMakeLists.txt
pos_follow1/src/arm_control/cfg/: reconfig.cfg
pos_follow1/src/arm_control/include/App/: arx_math.h
pos_follow1/src/arm_control/launch/: L5.launch
pos_follow1/src/arm_control/msg/: PosCmd.msg
pos_follow1/src/arm_control/shell/: setup_can.sh
pos_follow1/src/arm_control/src/: arx.cpp
pos_follow2/devel/: .catkin  local_setup.sh  setup.sh
pos_follow2/devel/lib/arm_control/: arm_node4
pos_follow2/devel/lib/pkgconfig/: arm_control.pc
pos_follow2/devel/share/arm_control/cmake/: arm_control-msg-extras.cmake  arm_control-msg-paths.cmake  arm_controlConfig.cmake
pos_follow2/devel/share/arm_control/docs/: reconfigConfig-usage.dox  reconfigConfig.dox  reconfigConfig.wikidoc
pos_follow2/devel/share/roseus/ros/arm_control/: manifest.l
pos_follow2/src/arm_control/: CMakeLists.txt
pos_follow2/src/arm_control/include/App/: L5_solve.h  arm_control.h
pos_follow2/src/arm_control/include/Hardware/: can.h  motor.h  teleop.h
pos_follow2/src/arm_control/msg/: ChassisCtrl.msg
pos_follow2/src/arm_control/shell/: setup_can.sh
pos_follow2/src/arm_control/src/: arx.cpp
pos_follow2/src/arm_control/src/App/: arm_control.cpp
tools/: arx_can.rules  build.sh  can.sh  delete_build_file.sh  pos_puppet.sh  pos_remote.sh  puppet.sh  remote.sh  set.sh
(+9 files in other folders)
